feat: add basic functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "persistor",
-        "reduxjs"
+        "reduxjs",
+        "Swipeable",
+        "uuidv"
     ]
 }
