--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "svg:transform": "./node_modules/@svgr/cli/bin/svgr --ignore-existing --no-index --native --typescript --out-dir src/shared/assets/icons/components src/shared/assets/icons/svg"
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
@@ -15,19 +16,25 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
+    "@svgr/cli": "^8.1.0",
+    "@types/uuid": "^9.0.8",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "babel-plugin-module-resolver": "4.1.0",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.1.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
